--- a/probooks/src/components/HomeComponent.css
+++ b/probooks/src/components/HomeComponent.css
@@ -1,39 +1,10 @@
-.read{
-    display: flex;
-    justify-content:space-around;
-
-}
-h2{
-    display: flex;
-    justify-content: left;
-}
-.searchbtn{
-    padding: 3px;
-    border-radius: 5px;
-    font-size: 20px;
+.btn{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
+    padding: 5px;
     margin-top: 20px;
-    font-family: 'Times New Roman', Times, serif;
-}
-.sesrch_text{
-    padding: 3px;
     border-radius: 5px;
-    font-size: 20px;
-    margin-top: 20px;
-    font-family: 'Times New Roman', Times, serif;
 }
-
-
-.image{
-    width: 100px;
-    height: 120px;
-    border: 5px;
-}
-
-.title{
+.books{
     font-family: 'Times New Roman', Times, serif;
-    font-size: 15px;
-}
-.author{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 15px;
 }
